# quasiconvex

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/Algo/: algo.hpp  algo.tpp
src/Algo/Convex/: convex.hpp  convex.tpp  types.hpp
src/Array/: array.hpp  array.tpp  basic.hpp  basic.ipp  types.hpp
src/Array/Basic/: basic.hpp  basic.tpp
src/Configuration/: configuration.hpp
src/Configuration/DirStruct/: dir_struct.cpp  dir_struct.hpp
src/Custom/: dir_struct.cpp  dir_struct.hpp
src/Graphics/: graphics.hpp  svg.hpp  types.hpp
src/Graphics/Color/: color.hpp  color.tpp  colors.tpp  opacity.hpp  opacity.tpp  rgb.cpp  rgb.hpp  rgb_o.cpp  rgb_o.hpp  rgb_o.tpp
src/Graphics/Colors/: colors.cpp  rgb.cpp  rgb.hpp
src/Graphics/Svg/: basic.cpp  basic.hpp  object_styles.cpp  object_styles.hpp  primitive_objects.cpp  primitive_objects.hpp
src/Graphics/Threedim/: model.cpp  model.hpp  threedim.hpp  types.hpp
src/Math/: _math.hpp  _math.tpp  algebraic_structures.hpp  algebraic_structures.ipp  math.hpp  math.tpp
src/Math/Geometry/: _geometry.hpp  _geometry.tpp  geometry.hpp  geometry.tpp  parameters.cpp  parameters.hpp  types.hpp
src/Modes/: check.hpp  includes.hpp  modes.hpp  ornstein.cpp  ornstein.hpp
src/Modes/checks/: rvalue_references.cpp  virtual_functions.cpp
src/Modes/working/: ornstein.cpp  (+1 more)
src/Ornstein/: function.hpp  function.tpp  types.hpp
src/Utils/: dir_utils.cpp  dir_utils.hpp  format_utils.cpp  format_utils.hpp  time_utils.hpp  type_utils.cpp  type_utils.hpp
working_files/: files_and_directories.md  next_actions.md  structures.md
(+74 files in other folders)
